[CORRECTION][RESTITUTION] Laisse le logo du CSIRT aligné à gauche pour les résolutions de moins de 1440px

--- a/mon-aide-cyber-ui/src/assets/styles/_restitution.scss
+++ b/mon-aide-cyber-ui/src/assets/styles/_restitution.scss
@@ -173,6 +173,7 @@ html {
     padding-left: 0;
     padding-right: 0;
   }
+
   padding-top: 2.5rem;
 
   display: flex;
@@ -193,10 +194,6 @@ html {
     .contact {
       padding-top: 1rem;
       padding-bottom: 1rem;
-
-      .logo {
-        text-align: left;
-      }
     }
   }
 
@@ -204,9 +201,7 @@ html {
     justify-content: center;
     align-items: center;
     align-content: center;
-    text-align: center;
   }
-
 }
 
 #ressources {
